--- a/_src/static/style/block/title/_title.scss
+++ b/_src/static/style/block/title/_title.scss
@@ -1,2 +1,28 @@
-.title {
+.title-1 {
+  font-weight: 700;
+  font-size: rem(60);
+  line-height: 1.13;
+  font-family: $ff-main;
+
+  @media (max-width: $md) {
+    font-size: rem(45);
+    text-align: center;
+  }
+}
+
+
+.title-2 {
+  font-weight: 700;
+  font-size: rem(17);
+  line-height: 2;
+  font-family: $ff-main;
+  text-align: center;
+}
+
+.title-3 {
+  font-weight: 700;
+  font-size: rem(24);
+  line-height: 1.2;
+  font-family: $ff-main;
+  text-align: center;
 }
