--- a/_src/static/style/base/_font.scss
+++ b/_src/static/style/base/_font.scss
@@ -1,30 +1,44 @@
 // ////////////////////////////////////////// Roboto
 @font-face {
+  font-weight: 100;
+  font-family: "Uni Neue";
+  font-style: normal;
+
+  font-display: swap;
+  src: url(../font/UniNeue/UniNeueBook.woff2),
+  url(../font/UniNeue/UniNeueBook.woff);
+}
+
+
+@font-face {
   font-weight: 400;
-  font-family: Roboto;
+  font-family: "Uni Neue";
   font-style: normal;
 
   font-display: swap;
-  src: url(../font/Roboto/Roboto-Regular.woff2),
-  url(../font/Roboto/Roboto-Regular.woff);
+  src: url(../font/UniNeue/UniNeueRegular.woff2),
+  url(../font/UniNeue/UniNeueRegular.woff);
 }
+
 
 @font-face {
   font-weight: 700;
-  font-family: Roboto;
+  font-family: "Uni Neue";
   font-style: normal;
 
   font-display: swap;
-  src: url(../font/Roboto/Roboto-Bold.woff2),
-  url(../font/Roboto/Roboto-Bold.woff);
+  src: url(../font/UniNeue/UniNeueBold.woff2),
+  url(../font/UniNeue/UniNeueBold.woff);
 }
 
+
+
 @font-face {
-  font-weight: 700;
-  font-family: Roboto;
-  font-style: italic;
+  font-weight: 900;
+  font-family: "Uni Neue";
+  font-style: normal;
 
   font-display: swap;
-  src: url(../font/Roboto/Roboto-BoldItalic.woff2),
-  url(../font/Roboto/Roboto-BoldItalic.woff);
+  src: url(../font/UniNeue/UniNeueHeavy.woff2),
+  url(../font/UniNeue/UniNeueHeavy.woff);
 }
