--- a/_src/static/style/block/header/_header.scss
+++ b/_src/static/style/block/header/_header.scss
@@ -1,2 +1,286 @@
 .header {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: rem(187);
+  padding-top: rem(25);
+
+  @media (max-width: $lg) {
+    padding-top: 0;
+  }
+}
+
+.header__container {
+  display: flex;
+  flex-direction: column;
+}
+
+.header__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: rem(25);
+  padding-bottom: rem(50);
+
+  @media (max-width: $lg) {
+    flex-wrap: wrap;
+    padding-top: rem(30);
+  }
+}
+
+.header__logo-desc {
+  display: flex;
+  align-items: center;
+
+  @media (max-width: $lg) {
+    margin-right: 0;
+  }
+
+  @media (max-width: $md) {
+    margin-right: rem(100);
+    margin-bottom: rem(50);
+  }
+
+  @media (max-width: 600px) {
+    margin-right: 0;
+  }
+
+  @media (max-width: 420px) {
+    margin-bottom: 0;
+  }
+}
+
+.header__logo {
+  display: inline-block;
+  width: rem(183);
+  height: rem(74);
+  margin-right: rem(35);
+
+  @media (max-width: 420px) {
+    width: rem(120);
+    margin-right: rem(0);
+  }
+}
+
+.header__desc {
+  margin-bottom: 0;
+
+  font-weight: 400;
+  font-size: rem(18);
+  line-height: 1.2;
+  letter-spacing: rem(.4);
+
+  @media (max-width: $lg) {
+    display: none;
+  }
+}
+
+.header__map-wrap-btn {
+  display: flex;
+  align-items: center;
+
+  @media (max-width: $md) {
+    order: 3;
+    margin: 0 auto;
+  }
+}
+
+.header__map-desc {
+  display: flex;
+  align-items: center;
+  margin-right: rem(60);
+
+  @media (max-width: $lg) {
+    display: none;
+  }
+}
+
+.header__map-img {
+  width: rem(77);
+  height: rem(76);
+  margin-right: rem(18);
+}
+
+.header__address {
+  flex-shrink: 0;
+  margin-bottom: 0;
+
+  font-size: rem(16);
+  line-height: 1.3;
+  letter-spacing: rem(.4);
+
+  transition: all .3s;
+
+  &:hover {
+    color: $c-red;
+  }
+}
+
+.header__address-link {
+  color: $c-red;
+  text-decoration: underline;
+
+  cursor: pointer;
+
+  &:hover {
+    color: $c-red;
+  }
+}
+
+.header__lang {
+  margin-right: rem(60);
+
+  font-size: rem(16);
+}
+
+.header__lang-text {
+  margin-bottom: rem(5);
+
+  text-align: center;
+}
+
+.header__lang-wrap-link {
+  display: flex;
+  justify-content: center;
+}
+
+.header__lang-link {
+  font-weight: 700;
+  color: $c-main;
+
+  transition: all .3s;
+
+  &--current {
+    color: $c-red;
+  }
+
+  &:first-child {
+    margin-right: rem(10);
+  }
+
+  &:hover {
+    color: $c-red;
+    text-decoration: none;
+  }
+}
+
+.header__btn {
+  min-height: rem(70);
+
+  font-size: rem(16);
+
+  background-color: $c-secondary;
+
+  transition: all .3s;
+
+  &:hover {
+    color: $c-white;
+    text-decoration: none;
+
+    box-shadow: inset 0 rem(5) 0 $c-grey,
+    0 rem(10) rem(20) $c-grey-light;
+  }
+}
+
+.header__contacts {
+  min-width: rem(220);
+
+  @media (max-width: $md) {
+    margin-bottom: rem(50);
+  }
+
+  @media (max-width: 420px) {
+    min-width: rem(165);
+  }
+}
+
+.header__phone {
+  position: relative;
+
+  display: inline-block;
+  padding-bottom: rem(10);
+  padding-left: rem(20);
+
+  font-size: rem(22);
+  line-height: 1;
+  color: $c-main;
+
+  transition: .3s;
+
+  @media (max-width: 420px) {
+    font-size: rem(16);
+  }
+
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: rem(-5);
+
+    display: block;
+    width: rem(16);
+    height: rem(16);
+
+    background: url("../img/social/phone.png") no-repeat;
+    background-size: 100%;
+    transform: translate(0, -100%);
+  }
+
+  &:hover {
+    color: $c-blue-light;
+    text-decoration: none;
+  }
+}
+
+.header__social-link:nth-child(3) {
+  margin-right: 0;
+}
+
+.header__burger {
+  display: none;
+
+  @media (max-width: $lg) {
+    position: relative;
+
+    display: block;
+    width: rem(24);
+    height: rem(18);
+
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+
+    &--opened {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+
+        width: rem(24);
+        height: rem(3);
+
+        background-color: $c-grey-dark;
+        box-shadow: 0 16px 0 0 $c-grey-dark;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        top: rem(8);
+        left: 0;
+
+        width: rem(24);
+        height: rem(3);
+
+        background-color: $c-grey-dark;
+      }
+    }
+  }
+  @media (max-width: $md) {
+    order: 2;
+    margin-bottom: rem(50);
+  }
 }
