--- a/_src/static/style/main.scss
+++ b/_src/static/style/main.scss
@@ -5,7 +5,6 @@
 
 // ///////////////////////////////////////// block
 @import "block/container";
-@import "block/section";
 
 @import "block/button/btn-reset";
 @import "block/button/btn";
@@ -30,3 +29,11 @@
 
 // ///////////////////////////////////////// display
 // @import "base/display";
+
+@import "block/nav";
+@import "block/social";
+@import "block/primary";
+@import "block/slider-sertificate";
+@import "block/desc-man";
+
+@import "block/modal";
